Segunda versión de la página web

--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
-<!Doctype html>
+
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Página de ejemplo del MOOC de LINUX - UPM.">
+    <!--Sustituir por los datos del alumno-->
+    <meta name="author" content="Daniel Ferreccio Gete">
 
-<head>
-	<title>Daniel Ferreccio MOOC</title>
-</head>
-<body>
-	<h1>Hola compañeros</h1>
-</body>
+    <!--Sustituir por los datos del alumno-->
+    <title>Daniel Ferreccio Gete</title>
 
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="container header-bar">
+      <!--Sustituir por los datos del alumno-->
+      <h3>Daniel Ferreccio Gete <span><img style="width: 214px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.jpg" align="right"></span></h3>
+      <p>
+        <!--Sustituir por los datos del alumno-->
+        Ocupación: Estudiante<br>
+        Edad: 23<br/>
+        Títulos ya adquiridos: Tecnico en sistemas microinformáticos y redes.<br>
+      </p>
+      <address>
+        <!--Sustituir por los datos del alumno-->
+        <span class='glyphicon glyphicon-pencil'></span> danielferreccio@outlook.es <br>
+      </address>
+
+      <!--Sustituir por los datos del alumno-->
+      <!--<p><a href="http://twitter.com/usuario" target="blank"><img src="img/twitter-icon.jpg" width=25></a>-->
+      <!--Sustituir por los datos del alumno-->
+      <!--<a href="http://github.com/usuario" target="blank"><img src="img/github-icon.png" width=25></a>-->
+      <!--Sustituir por los datos del alumno-->
+      <!--<a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>-->
+    </div>
+
+    <div class="container">
+      <div class='row'>
+        <div class='col-sm-8'>
+          <br>
+          <p>Soy un estudiante de grado superior dual de doble titulación, con un grado medio en sistemas microinformaticos y redes, que desea mejorar sus habilidades y conocimiento en el sistema Linux y el uso de GIT.</p>
+          
+          <p>Tengo conocimiento básico en programas ofimaticos, conozco lenguajes de programación orientados a objetos, domino Windows y un poco de Linux.</p>
+
+          <h3>Cursos</h3>
+          <table class='table table-striped'>
+            <tr><td><a href="https://www.miriadax.net" target="blank">Introducción a Linux como entorno de desarrollo de sistemas software</a>.</td></tr>
+            <tr><td><a href="http://ies.claradelrey.madrid.educa.madrid.org/portal/index.php?option=com_content&view=article&id=712&Itemid=58&lang=es" target="blank">Desarrollo de aplicaciones web y multiplataforma</a>.</td></tr>
+          </table>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <!--Sustituir por los datos del alumno-->
+        <p>&copy; Daniel Ferreccio Gete - 2018</p>
+      </footer>
+
+    </div>
+  </body>
 </html>
